--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Haoran Zhu</title>
+    <title>Tong Liu</title>
 
     <meta name="author" content="Jon Barron">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Haoran Zhu
                 </p>
-                <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/anna-choromanska">Anna Choromanska</a>. I work on deep learning for autonomous driving. 
+                <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on deep learning for autonomous driving. 
                 </p>
                 <p><b><i>My ultimate vision is to build intelligent machines for the physical world.</i></b> To enable that long term vision, I'm currently focusing on <b><i>autonomous driving</i></b> because:
                 </p>
