--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Haoran Zhu
+                  Tong Liu
                 </p>
-                <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on deep learning for autonomous driving. 
+                <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on distributed optimization, reinforcement learning, system theory and their applications on smart transportation. 
                 </p>
                 <p><b><i>My ultimate vision is to build intelligent machines for the physical world.</i></b> To enable that long term vision, I'm currently focusing on <b><i>autonomous driving</i></b> because:
                 </p>
