--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/me.jpeg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/me.jpeg" class="hoverZoomLink"></a>
+                <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/me.jpeg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
