Update website content

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                   To unlock fully autonomous driving, my answer is <b><i>building self-supervised world models for end-to-end learning</i></b>.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:hz1922@nyu.com">Email</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?hl=en&user=kbxHcKEAAAAJ&view_op=list_works&sortby=pubdate">Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/HaoranZhuExplorer">Github</a> &nbsp;/&nbsp;
-                  <a href="https://www.linkedin.com/in/haoranzhu/">Linkedin</a>
+                  <a href="mailto:tl3049@nyu.com">Email</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?user=LTH_3NgAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
+                  <a href="https://github.com/tl3049">Github</a> &nbsp;/&nbsp;
+                  <a href="https://www.linkedin.com/in/tongliu1024/">Linkedin</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
