Update website content

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   To unlock fully autonomous driving, my answer is <b><i>building self-supervised world models for end-to-end learning</i></b>.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:tl3049@nyu.com">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:tl3049@nyu.edu">Email</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=LTH_3NgAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://github.com/tl3049">Github</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/tongliu1024/">Linkedin</a>
