--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
+                  <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
               </td>
+              <!-- <td style="padding:2.5%;width:37%;max-width:37%">
+                <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
+              </td> -->
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
