Update website content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                 </p>
                 <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on distributed optimization, reinforcement learning, system theory and their applications on transportation and robotics. 
                 </p>
-                <p><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? My research answers this, in theory and in practice.
+                <ul>
+                <li><p><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? My research answers this, in theory and in practice.</li>
+                <li><p><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? My research answers this, in theory and in practice. </li>
+                </ul>
                 </i></b> To enable that long term vision, I'm currently focusing on <b><i>autonomous driving</i></b> because:
                 </p>
                 <ul>
