--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
                 </p>
                 <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on distributed optimization, reinforcement learning, system theory and their applications on transportation and robotics. 
                 </p>
-                <ul>
+
+                <p> My research tries to answer the following two questions:
+                </p>
                 <li><p><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? </li>
                 <li><p><b><i>Is it possible to achieve the desired behavior using only coarse information about a system, without detailed knowledge of its internal structure? </li>
                 </ul>
+                <p>System theory and learning-based methods are solutions to these two questions, respectively. The applications are nothing but demostration of these ideas.
+                </p>
                 </i></b> To enable that long term vision, I'm currently focusing on <b><i>autonomous driving</i></b> because:
                 </p>
                 <ul>
