--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
                 <p>I have been pursuing the solutions to the following questions:
                 </p>
-                <li><p><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? </li>
-                <li><p><b><i>Is it possible to achieve the desired behavior using only coarse information about a system, without detailed knowledge of its internal structure? </li>
+                <li><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? </li>
+                <li><b><i>Is it possible to achieve the desired behavior using only coarse information about a system, without detailed knowledge of its internal structure? </li>
                 </ul>
                 <p>System theory and machine learning provide preliminary solutions. I demonstrate these ideas through the following applications. 
                 </p>
@@ -50,9 +50,9 @@
                   <a href="https://www.linkedin.com/in/tongliu1024/">Linkedin</a>
                 </p>
               </td>
-              <td style="padding:2.5%;width:37%;max-width:37%">
+              <!-- <td style="padding:2.5%;width:37%;max-width:37%">
                   <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
-              </td>
+              </td> -->
               <!-- <td style="padding:2.5%;width:37%;max-width:37%">
                 <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
               </td> -->
