--- a/index.html
+++ b/index.html
@@ -26,26 +26,16 @@
                 </p>
 
                 <p>I have been pursuing the solutions to the following questions:
-                </p>
+                <ul> 
                 <li><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? </li>
                 <li><b><i>Is it possible to achieve the desired behavior using only coarse information about a system, without detailed knowledge of its internal structure? </li>
+                </i></b>
                 </ul>
-                <p>System theory and machine learning provide preliminary solutions. I demonstrate these ideas through the following applications. 
-                </p>
-                </i></b> 
-                To enable that long term vision, I'm currently focusing on <b><i>autonomous driving</i></b> because:
-                </p>
-                <ul>
-                <li>autonomous driving is generally a relatively simpler problem, as it mainly involves navigation instead of harder navigation+manipulation for the general embodied AI tasks.</li>
-                <li>level 2 autonomous driving is becoming increasingly popular in modern car systems, generating positive cash flow to support long-term level 4+ autonomous driving research.</li>
-                <li>given the two reasons above, if we cannot solve autonomous driving, we are unlikely to solve the broader problem of embodied AI.</li>
-                </ul>
-                <p>
-                  To unlock fully autonomous driving, my answer is <b><i>building self-supervised world models for end-to-end learning</i></b>.
+                Systems theory and machine learning provide principled approaches to these questions, and I demonstrate these ideas through my research.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:tl3049@nyu.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?user=LTH_3NgAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?user=LTH_3NgAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://github.com/tl3049">Github</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/tongliu1024/">Linkedin</a>
                 </p>
@@ -53,9 +43,9 @@
               <!-- <td style="padding:2.5%;width:37%;max-width:37%">
                   <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
               </td> -->
-              <!-- <td style="padding:2.5%;width:37%;max-width:37%">
+              <td style="padding:2.5%;width:37%;max-width:37%">
                 <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
-              </td> -->
+              </td>
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
