Update website content

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 
                 <p>I have been pursuing the solutions to the following questions:
                 <ul> 
-                <li><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? </li>
-                <li><b><i>Is it possible to achieve the desired behavior using only coarse information about a system, without detailed knowledge of its internal structure? </li>
-                </i></b>
+                <li><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? </i></b></li>
+                <li><b><i>Is it possible to achieve the desired behavior using only coarse information about a system, without detailed knowledge of its internal structure?</i></b></li>
                 </ul>
                 Systems theory and machine learning provide principled approaches to these questions, and I demonstrate these ideas through my research.
                 </p>
@@ -40,12 +39,12 @@
                   <a href="https://www.linkedin.com/in/tongliu1024/">Linkedin</a>
                 </p>
               </td>
-              <!-- <td style="padding:2.5%;width:37%;max-width:37%">
-                  <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
-              </td> -->
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
+                  <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 15px;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
               </td>
+              <!-- <td style="padding:2.5%;width:37%;max-width:37%">
+                <a href="images/capbala.webp"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/capbala.webp" class="hoverZoomLink"></a>
+              </td> -->
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
