--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Tong Liu
                 </p>
-                <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on distributed optimization, reinforcement learning, system theory, transportation, and robotics. 
+                <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on distributed optimization, reinforcement learning,  system theory, transportation, and robotics. 
                 </p>
 
                 <p>I have been pursuing the solutions to the following questions:
@@ -52,8 +52,7 @@
               <td style="padding:16px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  I'm interested in deep learning for autonomous driving and general deep learning algorithms. In particular, I'm focusing on world models, self-supervised representation learning, end-to-end learning, multi-modal perception (camera, LiDAR, radar) and continual learning.
-                </p>
+                  My recent research focuses on distributed optimization and reinforcement learning for multi-agent systems, with applications to transportation and robotics.
               </td>
             </tr>
           </tbody></table>
