Update website content

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
               <td style="padding:16px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  My recent research focuses on distributed optimization and reinforcement learning for multi-agent systems with applications to transportation and robotics.
+                  My research focuses on distributed optimization and reinforcement learning for multi-agent systems with applications to transportation and robotics. 
+                  Recently, some efforts are devoted to fine-tuning and reinforcement learning of large language models.
               </td>
             </tr>
           </tbody></table>
