Update website content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Tong Liu
                 </p>
-                <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on distributed optimization, reinforcement learning,  system theory, transportation, and robotics. 
+                <p>I'm a PhD candidate in the Department of <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Electrical and Computer Engineering</a> at <a href="https://www.nyu.edu/">New York University</a>, advised by Prof. <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Zhong-Ping Jiang</a>. I work on distributed optimization, reinforcement learning,  systems theory, transportation, and robotics. 
                 </p>
 
                 <p>I have been pursuing the solutions to the following questions:
