Update website content

--- a/index.html
+++ b/index.html
@@ -47,6 +47,23 @@
               </td> -->
             </tr>
           </tbody></table>
+          					<!-- START: 这是新插入的导航栏 -->
+					<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+						<tbody>
+							<tr>
+								<td style="padding:10px;width:50%;text-align:center;vertical-align:middle;background-color:#f0f0f0;border-bottom:1px solid #ccc;">
+									<strong>About</strong>
+								</td>
+								<td style="padding:10px;width:50%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+									<a href="publications.html">
+									Publications
+									</a>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+					<!-- END: 导航栏结束 -->
+
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:16px;width:100%;vertical-align:middle">
@@ -59,78 +76,6 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-
-
-           <!-- <tr>
-              <td style="padding:8px;width:80%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2501.04969" id="AD-L-JEPA">
-                  <span class="papertitle">AD-L-JEPA: Self-Supervised Spatial World Models with Joint Embedding Predictive Architecture for Autonomous Driving with LiDAR Data</span>
-                </a>
-                <br>
-                <b><i>Haoran Zhu</i></b>, Zhenyuan Dong, Kristi Topollai, Anna Choromanska
-                <br>
-                <em>Under Review</em>, 2025
-                <br>
-                <p></p>
-              </td>
-           </tr>
-
-           <tr>
-              <td style="padding:8px;width:80%;vertical-align:middle">
-                <a href="https://ieeexplore.ieee.org/abstract/document/10588463" id="MVRAE">
-                  <span class="papertitle">Multi-View Radar Autoencoder for Self-Supervised Automotive Radar Representation Learning</span>
-                </a>
-                <br>
-                <b><i>Haoran Zhu</i></b>, Haoze He, Anna Choromanska, Satish Ravindran, Binbin Shi, Lihui Chen
-                <br>
-                <em>IV</em>, 2024
-                <br>
-                <p></p>
-              </td>
-           </tr>
-
-            <tr>
-              <td style="padding:8px;width:80%;vertical-align:middle">
-                <a href="https://openaccess.thecvf.com/content/CVPR2024W/CLVISION/html/Zhu_TAME_Task_Agnostic_Continual_Learning_using_Multiple_Experts_CVPRW_2024_paper.html" id="TAME">
-                  <span class="papertitle">TAME: Task Agnostic Continual Learning using Multiple Experts</span>
-                </a>
-                <br>
-                <b><i>Haoran Zhu</i></b>, Maryam Majzoubi, Arihant Jain, Anna Choromanska
-                <br>
-                <em>CVPR Workshop</em>, 2024
-                <br>
-                <p></p>
-              </td>
-           </tr>
-
-           <tr>
-              <td style="padding:8px;width:80%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2209.12940" id="ERASE-Net">
-                  <span class="papertitle">ERASE-Net: Efficient segmentation networks for automotive radar signals</span>
-                </a>
-                <br>
-                Shihong Fang, <b><i>Haoran Zhu</i></b>, Devansh Bisla, Anna Choromanska, Satish Ravindran, Dongyin Ren, Ryan Wu
-                <br>
-                <em>ICRA</em>, 2023
-                <br>
-                <p></p>
-              </td>
-           </tr>
-
-           <tr>
-              <td style="padding:8px;width:80%;vertical-align:middle">
-                <a href="https://arxiv.org/abs/2209.12940" id="ViT">
-                  <span class="papertitle">Understanding Why ViT Trains Badly on Small Datasets: An Intuitive Perspective</span>
-                </a>
-                <br>
-                <b><i>Haoran Zhu</i></b>, Boyuan Chen, Carter Yang
-                <br>
-                <em>arxiv (with 50+ citations)</em>, 2023
-                <br>
-                <p></p>
-              </td>
-           </tr> -->
 
 
     
