Update website content

--- a/publications.html
+++ b/publications.html
@@ -21,11 +21,11 @@
                             <tr>
                                 <td style="padding:10px;width:50%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="index.html">
-                                    About
+                                    Home
                                     </a>
                                 </td>
                                 <td style="padding:10px;width:50%;text-align:center;vertical-align:middle;background-color:#f0f0f0;border-bottom:1px solid #ccc;">
-                                    <strong>Publications</strong>
+                                    <a>Publications</a>
                                 </td>
                             </tr>
                         </tbody>
