--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 						<tbody>
 							<tr>
 								<td style="padding:10px;width:50%;text-align:center;vertical-align:middle;background-color:#f0f0f0;border-bottom:1px solid #ccc;">
-									<strong>About</strong>
+									<a href="index.html">
+									Home
+									</a>
 								</td>
 								<td style="padding:10px;width:50%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
 									<a href="publications.html">
