--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,9 @@
                                     </a>
                                 </td>
                                 <td style="padding:10px;width:50%;text-align:center;vertical-align:middle;background-color:#f0f0f0;border-bottom:1px solid #ccc;">
-                                    <a>Publications</a>
+                                    <a href="publications.html">
+                                    Publications
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
