--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
 						<tbody>
 							<tr>
-								<td style="padding:10px;width:50%;text-align:center;vertical-align:middle;background-color:#f0f0f0;border-bottom:1px solid #ccc;">
+								<td style="padding:10px;width:50%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
 									<a href="index.html">
 									Home
 									</a>
