--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
                                     Home
                                     </a>
                                 </td>
-                                <td style="padding:10px;width:50%;text-align:center;vertical-align:middle;background-color:#f0f0f0;border-bottom:1px solid #ccc;">
+                                <td style="padding:10px;width:50%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="publications.html">
                                     Publications
                                     </a>
