Update website content

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 						<tbody>
 							<tr>
 								<td style="padding:10px;width:50%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
-									<a href="index.html">
+									<a href="index.html" class="nav-link">
 									Home
 									</a>
 								</td>
 								<td style="padding:10px;width:50%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
-									<a href="publications.html">
+									<a href="publications.html" class="nav-link">
 									Publications
 									</a>
 								</td>
