Update website content

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li><b><i>Break a hard problem into parts—fine. But when do solutions to the parts add up to a solution for the whole? </i></b></li>
                 <li><b><i>Is it possible to achieve the desired behavior using only coarse information about a system, without detailed knowledge of its internal structure?</i></b></li>
                 </ul>
-                Systems theory and machine learning provide principled approaches to these questions, and I use these ideas throughout my research.
+                Systems theory and machine learning provide principled concepts to address these questions, and I use these ideas throughout my research.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:tl3049@nyu.edu">Email</a> &nbsp;/&nbsp;
