Update website content

--- a/publications.html
+++ b/publications.html
@@ -37,41 +37,46 @@
                         <tbody>
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
-                                    
-                                    <h2>Book Chapters</h2>
-                                    <ol>
-                                        <li><strong>Tong Liu</strong> and Zhong-Ping Jiang, "Learning-Based Control of Autonomous Vehicles in Mixed Vehicular Platoons," in <em>Smarter Cyber Physical Systems: Enabling Methodologies and Applications</em>, Y. Wan, K. G. Vamvoudakis, Y. Chen, and F. L. Lewis, Eds. CRC Press, 2024.</li>
-                                    </ol>
-
-                                    <h2>Journal Papers</h2>
+                                    <h2>Distribued Optimization</h2>
                                     <ol>
                                         <li><strong>Tong Liu</strong> and Zhong-Ping Jiang, "Distributed Optimization of Nonlinear Multi-Agent Systems with Disturbance Rejection," <em>IEEE Transactions on Automatic Control</em>, Under Review.</li>
                                         <li><strong>Tong Liu</strong>, Michelangelo Bin, Ivano Notarnicola, Thomas Parisini and Zhong-Ping Jiang, "Robust Distributed Optimization for Multi-Agent Systems with General Linear Models," <em>IEEE Transactions on Automatic Control</em>, Second-Round Review.</li>
                                         <li><strong>Tong Liu</strong>, Miroslav Krstic and Zhong-Ping Jiang, "Adaptive Dynamic Programming-Regulated Extremum Seeking for Distributed Feedback Optimization," <em>IEEE Transactions on Automatic Control</em>, In Press, 2025, <a href="https://doi.org/10.1109/TAC.2025.3577956">DOI: 10.1109/TAC.2025.3577956</a>.</li>
                                         <li><strong>Tong Liu</strong>, Tengfei Liu and Zhong-Ping Jiang, "Feedback Optimization of Nonlinear Strict-Feedback Systems," <em>Journal of Systems Science & Complexity</em>, 38.2 (2025): 717-738.</li>
-                                        <li><strong>Tong Liu</strong>, Leilei Cui, Bo Pang and Zhong-Ping Jiang, "A Unified Framework for Data-Driven Optimal Control of Connected Vehicles in Mixed Traffic," <em>IEEE Transactions on Intelligent Vehicles</em>, vol. 8, no. 8, pp. 4131 - 4145, 2023.</li>
-                                        <li>Zhun Yin, <strong>Tong Liu</strong>, Chieh Wang, Hong Wang and Zhong-Ping Jiang, "Reducing Urban Traffic Congestion Using Deep Learning and Model Predictive Control," <em>IEEE Transactions on Neural Networks and Learning Systems</em>, vol. 35, no. 9, pp. 12760 - 12771, 2023.</li>
-                                        <li>Jing Xun, <strong>Tong Liu</strong>, Bin Ning and Yafei Liu, "Using Approximate Dynamic Programming to Maximize Regenerative Energy Utilization for Metro," <em>IEEE Transactions on Intelligent Transportation Systems</em>, vol. 21, no. 9, pp. 3650-3662, 2020.</li>
-                                        <li>Zhun Yin, <strong>Tong Liu</strong>, Guohuai Zhang, Hong Wang and Zhong-Ping Jiang, "Distributed Deep Learning and Adaptive Control for Large-Scale Traffic Signal Networks," <em>Transportation Research Part B: Emerging Technologies</em>, Under review.</li>
-                                        <li>Jiho Park, <strong>Tong Liu</strong>, Chieh Wang, Andy Berres, Joseph Severino, Juliette Ugirumurera, Airton G. Kohls, Hong Wang, Jibonananda Sanyal and Zhong-Ping Jiang, "Adaptive Urban Traffic Signal Control: A Case Study with Real-World Experiments," <em>Journal of Intelligent Transportation Systems</em>, vol. 151, no. 2, 04024113, 2025.</li>
-                                    </ol>
-
-                                    <h2>Conference Papers</h2>
-                                    <ol>
                                         <li><strong>Tong Liu</strong>, Xiaoming Hu and Zhong-Ping Jiang, "Distributed Feedback Optimization for Linear Uncertain Multiagent Systems with Unknown Exosystems," <em>13th IFAC Symposium on Nonlinear Control Systems</em>, Accepted.</li>
                                         <li><strong>Tong Liu</strong>, Miroslav Krstic and Zhong-Ping Jiang, "Extremum Seeking and Adaptive Dynamic Programming for Distributed Feedback Optimization," <em>2024 IEEE Conference on Decision and Control (CDC)</em>, pp. 7662-7667, 2024.</li>
                                         <li><strong>Tong Liu</strong>, Michelangelo Bin, Ivano Notarnicola, Thomas Parisini and Zhong-Ping Jiang, "Discrete-Time Distributed Optimization for Linear Uncertain Multi-Agent Systems," <em>2023 IEEE Conference on Decision and Control (CDC)</em>, pp. 7439-7444, 2023.</li>
+                                    </ol>
+
+
+                                    <h2>Traffic Signal Optimization</h2>
+                                    <ol>
                                         <li><strong>Tong Liu</strong>, Qichao Wang, Hong Wang and Zhong-Ping Jiang, "Model Predictive Control for Urban Traffic Signals with Stability Guarantees," <em>SIAM Conference on Control and Its Application</em>, pp. 64-71, 2023.</li>
                                         <li><strong>Tong Liu</strong>, Hong Wang and Zhong-Ping Jiang, "Data-Driven Optimal Control of Traffic Signals for Urban Road Networks," <em>2022 IEEE 61st Conference on Decision and Control (CDC)</em>, pp. 844-849, 2022.</li>
-                                        <li><strong>Tong Liu</strong>, Leilei Cui, Bo Pang and Zhong-Ping Jiang, "Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road," <em>2021 IEEE Conference on Decision and Control (CDC)</em>, pp. 77-82, 2021.</li>
-                                        <li><strong>Tong Liu</strong>, Leilei Cui, Bo Pang and Zhong-Ping Jiang, "Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming," <em>2021 IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON)</em>, pp. 370-375, 2021.</li>
-                                        <li><strong>Tong Liu</strong>, Jing Xun and Yafei Liu, "Analysis of Optimal Train Control Problem on a Non-Steep Track with Speed Limit," <em>2019 IEEE Intelligent Transportation Systems Conference (ITSC)</em>, pp. 2533-2538, 2019.</li>
-                                        <li><strong>Tong Liu</strong>, Jing Xun, Jiateng Yin and Xiao Xiao, "Optimal Train Control by Approximate Dynamic Programming: Comparison of Three Value Function Approximation Methods," <em>2018 21st International Conference on Intelligent Transportation Systems (ITSC)</em>, pp. 2741-2746, 2018.</li>
-                                        <li><strong>Tong Liu</strong>, Jing Xun, Bin Ning, Wei Wang and Lanfang Zhang, "An Energy-Efficient Control Method for Train’s Operation by Q-Learning and Historical Data," <em>Chinese Automation Congress (CAC)</em>, in Chinese, 2018.</li>
+                                        <li>Zhun Yin, <strong>Tong Liu</strong>, Chieh Wang, Hong Wang and Zhong-Ping Jiang, "Reducing Urban Traffic Congestion Using Deep Learning and Model Predictive Control," <em>IEEE Transactions on Neural Networks and Learning Systems</em>, vol. 35, no. 9, pp. 12760 - 12771, 2023.</li>
+                                        <li>Zhun Yin, <strong>Tong Liu</strong>, Guohuai Zhang, Hong Wang and Zhong-Ping Jiang, "Distributed Deep Learning and Adaptive Control for Large-Scale Traffic Signal Networks," <em>Transportation Research Part B: Emerging Technologies</em>, Under review.</li>
+                                        <li>Jiho Park, <strong>Tong Liu</strong>, Chieh Wang, Andy Berres, Joseph Severino, Juliette Ugirumurera, Airton G. Kohls, Hong Wang, Jibonananda Sanyal and Zhong-Ping Jiang, "Adaptive Urban Traffic Signal Control: A Case Study with Real-World Experiments," <em>Journal of Intelligent Transportation Systems</em>, vol. 151, no. 2, 04024113, 2025.</li>
                                         <li>Jiho Park, <strong>Tong Liu</strong>, Chieh Wang, Hong Wang, Qichao Wang and Zhong-Ping Jiang, "Traffic Signal Control for Large-Scale Urban Traffic Networks: Real-World Experiments using Vision-based Sensors," <em>2024 IEEE 18th International Conference on Control & Automation (ICCA)</em>, pp. 282-287, 2024.</li>
                                         <li>Jiho Park, <strong>Tong Liu</strong>, Chieh Wang, Andy Berres, Joseph Severino, Juliette Ugirumurera, Airton G. Kohls, Hong Wang, Jibonananda Sanyal and Zhong-Ping Jiang, "Adaptive Urban Traffic Signal Control for Multiple Intersections: An LQR Approach," <em>2022 IEEE Intelligent Transportation Systems Conference (ITSC)</em>, pp. 2240-2245, 2022.</li>
                                     </ol>
 
+
+                                    <h2>Reinforcement Learning for Autonomous Driving</h2>
+                                    <ol>
+                                        <li><strong>Tong Liu</strong> and Zhong-Ping Jiang, "Learning-Based Control of Autonomous Vehicles in Mixed Vehicular Platoons," in <em>Smarter Cyber Physical Systems: Enabling Methodologies and Applications</em>, Y. Wan, K. G. Vamvoudakis, Y. Chen, and F. L. Lewis, Eds. CRC Press, 2024.</li>\
+                                        <li><strong>Tong Liu</strong>, Leilei Cui, Bo Pang and Zhong-Ping Jiang, "A Unified Framework for Data-Driven Optimal Control of Connected Vehicles in Mixed Traffic," <em>IEEE Transactions on Intelligent Vehicles</em>, vol. 8, no. 8, pp. 4131 - 4145, 2023.</li>
+                                        <li><strong>Tong Liu</strong>, Leilei Cui, Bo Pang and Zhong-Ping Jiang, "Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road," <em>2021 IEEE Conference on Decision and Control (CDC)</em>, pp. 77-82, 2021.</li>
+                                        <li><strong>Tong Liu</strong>, Leilei Cui, Bo Pang and Zhong-Ping Jiang, "Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming," <em>2021 IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON)</em>, pp. 370-375, 2021.</li>
+                                    </ol>
+
+
+                                    <h2>Reinforcement Learning for Engergy-Efficient Train Operation</h2>
+                                    <ol>
+                                        <li><strong>Tong Liu</strong>, Jing Xun and Yafei Liu, "Analysis of Optimal Train Control Problem on a Non-Steep Track with Speed Limit," <em>2019 IEEE Intelligent Transportation Systems Conference (ITSC)</em>, pp. 2533-2538, 2019.</li>
+                                        <li><strong>Tong Liu</strong>, Jing Xun, Jiateng Yin and Xiao Xiao, "Optimal Train Control by Approximate Dynamic Programming: Comparison of Three Value Function Approximation Methods," <em>2018 21st International Conference on Intelligent Transportation Systems (ITSC)</em>, pp. 2741-2746, 2018.</li>
+                                        <li><strong>Tong Liu</strong>, Jing Xun, Bin Ning, Wei Wang and Lanfang Zhang, "An Energy-Efficient Control Method for Train’s Operation by Q-Learning and Historical Data," <em>Chinese Automation Congress (CAC)</em>, in Chinese, 2018.</li>
+                                        <li>Jing Xun, <strong>Tong Liu</strong>, Bin Ning and Yafei Liu, "Using Approximate Dynamic Programming to Maximize Regenerative Energy Utilization for Metro," <em>IEEE Transactions on Intelligent Transportation Systems</em>, vol. 21, no. 9, pp. 3650-3662, 2020.</li>
+                                    </ol>
                                 </td>
                             </tr>
                         </tbody>
