Update website content

--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@
 
                                     <h2>Reinforcement Learning for Autonomous Driving</h2>
                                     <ol>
-                                        <li><strong>Tong Liu</strong> and Zhong-Ping Jiang, "Learning-Based Control of Autonomous Vehicles in Mixed Vehicular Platoons," in <em>Smarter Cyber Physical Systems: Enabling Methodologies and Applications</em>, Y. Wan, K. G. Vamvoudakis, Y. Chen, and F. L. Lewis, Eds. CRC Press, 2024.</li>\
+                                        <li><strong>Tong Liu</strong> and Zhong-Ping Jiang, "Learning-Based Control of Autonomous Vehicles in Mixed Vehicular Platoons," in <em>Smarter Cyber Physical Systems: Enabling Methodologies and Applications</em>, Y. Wan, K. G. Vamvoudakis, Y. Chen, and F. L. Lewis, Eds. CRC Press, 2024.</li>
                                         <li><strong>Tong Liu</strong>, Leilei Cui, Bo Pang and Zhong-Ping Jiang, "A Unified Framework for Data-Driven Optimal Control of Connected Vehicles in Mixed Traffic," <em>IEEE Transactions on Intelligent Vehicles</em>, vol. 8, no. 8, pp. 4131 - 4145, 2023.</li>
                                         <li><strong>Tong Liu</strong>, Leilei Cui, Bo Pang and Zhong-Ping Jiang, "Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road," <em>2021 IEEE Conference on Decision and Control (CDC)</em>, pp. 77-82, 2021.</li>
                                         <li><strong>Tong Liu</strong>, Leilei Cui, Bo Pang and Zhong-Ping Jiang, "Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming," <em>2021 IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON)</em>, pp. 370-375, 2021.</li>
