Update website content

--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
                                     <a href="index.html" class="nav-link">Home</a>
                                 </td>
                                 <td style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;background-color:#f0f0f0;border-bottom:1px solid #ccc;">
-                                    <strong>Research</strong>
+                                    <a href="research.html" class="nav-link">Research</a>
                                 </td>
                                 <td style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="publications.html" class="nav-link">Publications</a>
