--- a/publications.html
+++ b/publications.html
@@ -25,6 +25,11 @@
                                     </a>
                                 </td>
                                 <td style="padding:10px;width:50%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+									<a href="research.html" class="nav-link">
+									Research
+									</a>
+								</td>
+                                <td style="padding:10px;width:50%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="publications.html" class="nav-link">
                                     Publications
                                     </a>
