--- a/research.html
+++ b/research.html
@@ -11,11 +11,13 @@
 </head>
 
 <body>
-    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <table
+        style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
         <tbody>
             <tr style="padding:0px">
                 <td style="padding:0px">
-                    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                    <table
+                        style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                         <tbody>
                             <tr style="padding:0px">
                                 <td style="padding:2.5%;width:100%;vertical-align:middle">
@@ -26,18 +28,22 @@
                             </tr>
                         </tbody>
                     </table>
-                    
+
                     <!-- 导航栏 -->
-                    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                    <table
+                        style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                         <tbody>
                             <tr>
-                                <td style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                <td
+                                    style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="index.html" class="nav-link">Home</a>
                                 </td>
-                                <td style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;background-color:#f0f0f0;border-bottom:1px solid #ccc;">
+                                <td
+                                    style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="research.html" class="nav-link">Research</a>
                                 </td>
-                                <td style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
+                                <td
+                                    style="padding:10px;width:33.3%;text-align:center;vertical-align:middle;border-bottom:1px solid #ccc;">
                                     <a href="publications.html" class="nav-link">Publications</a>
                                 </td>
                             </tr>
@@ -45,7 +51,8 @@
                     </table>
 
                     <!-- 研究内容 -->
-                    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                    <table
+                        style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                         <tbody>
 
                             <!-- 研究方向 1 -->
@@ -55,7 +62,8 @@
                                     <table style="width:100%;border:0px;">
                                         <tr>
                                             <td style="width:30%;padding-right:20px;">
-                                                <img src="images/placeholder.png" alt="Distributed Optimization Image" style="width:100%; border-radius:10px;">
+                                                <img src="images/placeholder.png" alt="Distributed Optimization Image"
+                                                    style="width:100%; border-radius:10px;">
                                             </td>
                                             <td style="width:70%;">
                                                 <p>
@@ -66,9 +74,13 @@
                                     </table>
                                 </td>
                             </tr>
-                            
+
                             <!-- 分割线 -->
-                            <tr><td style="padding:0px 20px;"><hr style="border: 0; height: 1px; background: #ddd;"></td></tr>
+                            <tr>
+                                <td style="padding:0px 20px;">
+                                    <hr style="border: 0; height: 1px; background: #ddd;">
+                                </td>
+                            </tr>
 
                             <!-- 研究方向 2 -->
                             <tr>
@@ -77,7 +89,9 @@
                                     <table style="width:100%;border:0px;">
                                         <tr>
                                             <td style="width:30%;padding-right:20px;">
-                                                <img src="images/placeholder.png" alt="Traffic Signal Optimization Image" style="width:100%; border-radius:10px;">
+                                                <img src="images/placeholder.png"
+                                                    alt="Traffic Signal Optimization Image"
+                                                    style="width:100%; border-radius:10px;">
                                             </td>
                                             <td style="width:70%;">
                                                 <p>
@@ -90,16 +104,21 @@
                             </tr>
 
                             <!-- 分割线 -->
-                            <tr><td style="padding:0px 20px;"><hr style="border: 0; height: 1px; background: #ddd;"></td></tr>
+                            <tr>
+                                <td style="padding:0px 20px;">
+                                    <hr style="border: 0; height: 1px; background: #ddd;">
+                                </td>
+                            </tr>
 
                             <!-- 研究方向 3 -->
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <h3>Reinforcement Learning for Autonomous Driving</h3>
-                                     <table style="width:100%;border:0px;">
+                                    <table style="width:100%;border:0px;">
                                         <tr>
                                             <td style="width:30%;padding-right:20px;">
-                                                <img src="images/placeholder.png" alt="Autonomous Driving Image" style="width:100%; border-radius:10px;">
+                                                <img src="images/placeholder.png" alt="Autonomous Driving Image"
+                                                    style="width:100%; border-radius:10px;">
                                             </td>
                                             <td style="width:70%;">
                                                 <p>
@@ -112,16 +131,21 @@
                             </tr>
 
                             <!-- 分割线 -->
-                            <tr><td style="padding:0px 20px;"><hr style="border: 0; height: 1px; background: #ddd;"></td></tr>
+                            <tr>
+                                <td style="padding:0px 20px;">
+                                    <hr style="border: 0; height: 1px; background: #ddd;">
+                                </td>
+                            </tr>
 
                             <!-- 研究方向 4 -->
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <h3>Reinforcement Learning for Energy-Efficient Train Operation</h3>
-                                     <table style="width:100%;border:0px;">
+                                    <table style="width:100%;border:0px;">
                                         <tr>
                                             <td style="width:30%;padding-right:20px;">
-                                                <img src="images/placeholder.png" alt="Train Operation Image" style="width:100%; border-radius:10px;">
+                                                <img src="images/placeholder.png" alt="Train Operation Image"
+                                                    style="width:100%; border-radius:10px;">
                                             </td>
                                             <td style="width:70%;">
                                                 <p>
@@ -140,4 +164,5 @@
         </tbody>
     </table>
 </body>
+
 </html>
