--- a/research.html
+++ b/research.html
@@ -49,7 +49,7 @@
                                     <table style="width:100%;border:0px;">
                                         <tr>
                                             <td style="width:30%;padding-right:20px;">
-                                                <img src="images/placeholder.png" alt="Distributed Optimization Image"
+                                                <img src="images/disOpt.gif" alt="Distributed Optimization Image"
                                                     style="width:100%; border-radius:10px;">
                                             </td>
                                             <td style="width:70%;">
