Update website content

--- a/publications.html
+++ b/publications.html
@@ -47,11 +47,11 @@
                                     <ol>
                                         <li><strong>Tong Liu</strong> and Zhong-Ping Jiang, "Distributed Optimization of
                                             Nonlinear Multi-Agent Systems with Disturbance Rejection," <em>IEEE
-                                                Transactions on Automatic Control</em>, Under Review, 2025</li>
+                                                Transactions on Automatic Control</em>, Under Review, 2025.</li>
                                         <li><strong>Tong Liu</strong>, Michelangelo Bin, Ivano Notarnicola, Thomas
                                             Parisini and Zhong-Ping Jiang, "Robust Distributed Optimization for
                                             Multi-Agent Systems with General Linear Models," <em>IEEE Transactions on
-                                                Automatic Control</em>, Second-Round Review, 2024</li>
+                                                Automatic Control</em>, Second-Round Review, 2024.</li>
                                         <li><strong>Tong Liu</strong>, Miroslav Krstic and Zhong-Ping Jiang, "Adaptive
                                             Dynamic Programming-Regulated Extremum Seeking for Distributed Feedback
                                             Optimization," <em>IEEE Transactions on Automatic Control</em>, In Press,
@@ -63,7 +63,7 @@
                                         <li><strong>Tong Liu</strong>, Xiaoming Hu and Zhong-Ping Jiang, "Distributed
                                             Feedback Optimization for Linear Uncertain Multiagent Systems with Unknown
                                             Exosystems," <em>13th IFAC Symposium on Nonlinear Control Systems</em>,
-                                            Accepted, 2025</li>
+                                            Accepted, 2025.</li>
                                         <li><strong>Tong Liu</strong>, Miroslav Krstic and Zhong-Ping Jiang, "Extremum
                                             Seeking and Adaptive Dynamic Programming for Distributed Feedback
                                             Optimization," <em>2024 IEEE Conference on Decision and Control (CDC)</em>,
