--- a/research.html
+++ b/research.html
@@ -43,16 +43,22 @@
                         <tbody>
 
                             <!-- 研究方向 1 -->
+                            <!-- 研究方向 1 -->
                             <tr>
                                 <td style="padding:20px;width:100%;vertical-align:middle">
                                     <h3>Distributed Optimization</h3>
                                     <table style="width:100%;border:0px;">
                                         <tr>
-                                            <td style="width:30%;padding-right:20px;">
-                                                <img src="images/disOpt.gif" alt="Distributed Optimization Image"
-                                                    style="width:100%; border-radius:10px;">
+                                            <!-- Image cell width increased to 40% -->
+                                            <td style="width:40%;padding-right:20px;vertical-align: top;">
+                                                <img src="images/placeholder.png" alt="Distributed Optimization Image" style="width:100%; border-radius:10px;">
+                                                <!-- Title added below the image -->
+                                                <p style="text-align:center;font-style:italic;margin-top:5px;">
+                                                    Relative error of all agents
+                                                </p>
                                             </td>
-                                            <td style="width:70%;">
+                                            <!-- Text cell width decreased to 60% -->
+                                            <td style="width:60%;vertical-align: top;">
                                                 <p>
                                                     在这里写下关于“分布式优化”研究方向的详细介绍。您可以描述您在这个领域解决的核心问题、使用的方法以及取得的成果。
                                                 </p>
