Update website content

--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@
                                         <tr>
                                             <!-- Image cell width increased to 40% -->
                                             <td style="width:40%;padding-right:20px;vertical-align: top;">
-                                                <img src="images/placeholder.png" alt="Distributed Optimization Image" style="width:100%; border-radius:10px;">
+                                                <img src="images/disOpt.gif" alt="Distributed Optimization Image" style="width:100%; border-radius:10px;">
                                                 <!-- Title added below the image -->
                                                 <p style="text-align:center;font-style:italic;margin-top:5px;">
                                                     Relative error of all agents
