--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
                                                 <figure style="margin:0;">
                                                     <img src="images/disOpt.gif" alt="Distributed Optimization Image" style="width:100%; border-radius:10px;">
                                                     <figcaption style="text-align:center;font-style:italic;margin-top:5px;">
-                                                        Convergence errors of all the agents
+                                                        Convergence errors of all the computing units
                                                     </figcaption>
                                                 </figure>
                                             </td>
