--- a/research.html
+++ b/research.html
@@ -76,8 +76,8 @@
                                                     My work develops <strong>robust</strong> algorithms that provably
                                                     converge despite complex agent dynamics,
                                                     parametric uncertainties, and exogenous disturbances. We co-design the
-                                                    optimizer and controller—leveraging
-                                                    <em>extremum seeking</em>, <em>adaptive dynamic programming</em>,
+                                                    optimizer and controller—leveraging <em>output regulation</em>,
+                                                    <em>extremum seeking</em>,
                                                     and <em>reinforcement learning</em>—and
                                                     certify stability and performance using the <em>small-gain
                                                         theorem</em> and <em>singular-perturbation
